--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
                 <div class="card">
                     <!-- Header Section -->
                     <div class="profile-section">
-                        <img src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?w=400&h=400&fit=crop" 
+                        <img src="otter.png" 
                              alt="Profile" 
                              class="profile-image">
                         <div class="profile-info">
-                            <h1>Your Name</h1>
-                            <p>Registration Number: XXXXXXXXXXXXX</p>
+                            <h1>SHREYA</h1>
+                            <p>Registration Number: 233</p>
                             <p>Department: Computer Science</p>
-                            <p>Section: A</p>
-                            <p>Batch: 2024</p>
+                            <p>Section: B</p>
+                            <p>Batch: 2023-24</p>
                         </div>
                     </div>
 
@@ -82,7 +82,7 @@
 
                 <div class="report-card">
                     <h1>Seminar Report</h1>
-                    <div class="report-content">
+                    <div class="Report-APPLE INTELLIGENCE.pdf">
                         <p>Your report content goes here...</p>
                     </div>
                 </div>
