--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="presentation-container">
                 <div class="presentation-frame">
                     <iframe
-                        src="https://www.canva.com/design/DAGd9o6p5qM/embed"
+                        src="https://www.canva.com/design/DAGd9o6p5qM/UBEX_YyLPd9AzJvU5noGnw/view?utm_content=DAGd9o6p5qM&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h6e3432cefe"
                         width="100%"
                         height="100%"
                         allowfullscreen
