--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE DBMS CASE STUDY</title>
+    <title>Technical Presentation</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
 </head>
@@ -19,18 +19,18 @@
                              alt="Profile" 
                              class="profile-image">
                         <div class="profile-info">
-                            <h1>SHREYA</h1>
-                            <p>Registration Number: 233</p>
+                            <h1>Your Name</h1>
+                            <p>Registration Number: XXXXXXXXXXXXX</p>
                             <p>Department: Computer Science</p>
-                            <p>Section: B</p>
-                            <p>Batch: 2023-24</p>
+                            <p>Section: A</p>
+                            <p>Batch: 2024</p>
                         </div>
                     </div>
 
                     <!-- Presentation Title -->
                     <div class="presentation-section">
                         <h2>Database Management Systems</h2>
-                        <h3>CASE-STUDY Presentation</h3>
+                        <h3>Technical Presentation</h3>
                         
                         <div class="button-group">
                             <button onclick="navigateTo('presentation')" class="btn btn-primary">
@@ -62,7 +62,7 @@
             <div class="presentation-container">
                 <div class="presentation-frame">
                     <iframe
-                        src="https://www.canva.com/design/DAGd9o6p5qM/embed"
+                        src="https://www.canva.com/design/DAGd9o6p5qM/view?embed"
                         width="100%"
                         height="100%"
                         allowfullscreen
