--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="presentation-container">
                 <div class="presentation-frame">
                     <iframe
-                        src="https://www.canva.com/design/DAGd9o6p5qM/view?embed"
+                        src="https://www.canva.com/design/DAGd9o6p5qM/ldUVdgdgWTEG_MSRtJvvvA/view"
                         width="100%"
                         height="100%"
                         allowfullscreen
