--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,9 +15,7 @@
                 <div class="card">
                     <!-- Header Section -->
                     <div class="profile-section">
-                        <img src="pic.png" 
-                             alt="Profile" 
-                             class="profile-image">
+                        <img src="pic.png" alt="Profile" class="profile-image">
                         <div class="profile-info">
                             <h1>SHREYA SK</h1>
                             <p>Registration Number: 233</p>
@@ -33,12 +31,14 @@
                         <h3>Technical Presentation</h3>
                         
                         <div class="button-group">
-                            <button onclick="navigateTo('presentation')" class="btn btn-primary">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2 3h20"></path><path d="M21 3v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V3"></path><path d="m7 21 5-5 5 5"></path></svg>
+                            <a href="https://www.canva.com/design/DAGd9o6p5qM/view" target="_blank" class="btn btn-primary">
                                 View Presentation
-                            </button>
+                            </a>
                             <button onclick="navigateTo('report')" class="btn btn-secondary">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"></path><polyline points="14 2 14 8 20 8"></polyline></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"></path>
+                                    <polyline points="14 2 14 8 20 8"></polyline>
+                                </svg>
                                 View Report
                             </button>
                         </div>
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <!-- Presentation Page -->
+        <!-- Presentation Page (Optional, if needed) -->
         <div id="presentation" class="page">
             <div class="wave-background">
                 <div class="wave wave-1"></div>
@@ -55,35 +55,28 @@
             </div>
             
             <button onclick="navigateTo('home')" class="back-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 19-7-7 7-7"></path><path d="M19 12H5"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="m12 19-7-7 7-7"></path>
+                    <path d="M19 12H5"></path>
+                </svg>
                 Back to Home
             </button>
-
-            <div class="presentation-container">
-                <div class="presentation-frame">
-                    <iframe
-                        src="https://www.canva.com/design/DAGd9o6p5qM/embed"
-                        width="100%"
-                        height="100%"
-                        allowfullscreen
-                        title="Presentation"
-                    ></iframe>
-                </div>
-            </div>
         </div>
 
         <!-- Report Page -->
         <div id="report" class="page">
             <div class="container">
                 <button onclick="navigateTo('home')" class="back-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 19-7-7 7-7"></path><path d="M19 12H5"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="m12 19-7-7 7-7"></path>
+                        <path d="M19 12H5"></path>
+                    </svg>
                     Back to Home
                 </button>
 
                 <div class="report-card">
                     <h1>Seminar Report</h1>
                     <div class="report-content">
-                        <!-- Add the content from the PDF -->
                         <h2>Case Study - Leveraging Apple Intelligence Using New Age DBMS</h2>
                         <p><strong>Name:</strong> S K Shreya</p>
                         <p><strong>Branch:</strong> BTech CSE B</p>
