--- a/index.html
+++ b/index.html
@@ -28,17 +28,9 @@
                     <!-- Presentation Title -->
                     <div class="presentation-section">
                         <h2>Database Management Systems</h2>
-                        <h3>CASE-STUDY Presentation</h3>
-                        
-                        <div class="button-group">
-                            <button onclick="navigateTo('presentation')" class="btn btn-primary">
-                                View Presentation (Embedded)
-                            </button>
-                            <a href="https://www.canva.com/design/DAGd9o6p5qM/UBEX_YyLPd9AzJvU5noGnw/view?utm_content=DAGd9o6p5qM&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h6e3432cefe" 
-                               target="_blank" class="btn btn-secondary">
-                                View in New Tab
-                            </a>
-                        </div>
+                        <h3>Technical Presentation</h3>
+                        <button onclick="navigateTo('presentation')" class="btn btn-primary">View Presentation</button>
+                        <button onclick="navigateTo('report')" class="btn btn-secondary">View Report</button>
                     </div>
                 </div>
             </div>
@@ -46,66 +38,26 @@
 
         <!-- Presentation Page -->
         <div id="presentation" class="page">
-            <div class="wave-background">
-                <div class="wave wave-1"></div>
-                <div class="wave wave-2"></div>
-            </div>
-            
-            <button onclick="navigateTo('home')" class="back-button">
-                Back to Home
-            </button>
-
+            <button onclick="navigateTo('home')" class="back-button">Back to Home</button>
             <div class="presentation-container">
                 <div class="presentation-frame">
-                    <iframe
-                        src="https://www.canva.com/design/DAGd9o6p5qM/UBEX_YyLPd9AzJvU5noGnw/view"
-                        width="100%"
-                        height="600px"
-                        allowfullscreen
-                        title="Presentation">
-                    </iframe>
+                    <iframe src="https://www.canva.com/design/DAGd9o6p5qM/UBEX_YyLPd9AzJvU5noGnw/view?embed" width="100%" height="600px" allowfullscreen title="Presentation"></iframe>
                 </div>
             </div>
         </div>
 
         <!-- Report Page -->
         <div id="report" class="page">
-            <div class="container">
-                <button onclick="navigateTo('home')" class="back-button">Back to Home</button>
-                <div class="report-card">
-                    <h1>Seminar Report</h1>
-                    <div class="report-content">
-                        <h2>Case Study - Leveraging Apple Intelligence Using New Age DBMS</h2>
-                        <p><strong>Name:</strong> S K Shreya</p>
-                        <p><strong>Branch:</strong> BTech CSE B</p>
-                        <p><strong>Roll Number:</strong> 1223510233</p>
-
-                        <h3>Introduction</h3>
-                        <p>
-                            The integration of Database Management Systems (DBMS) in Apple Inc.'s intelligence framework is essential for optimizing data management and enhancing analytical capabilities.
-                        </p>
-
-                        <h3>DBMS Integration in Apple's Operations</h3>
-                        <p>
-                            <strong>Data Processing:</strong> Apple employs advanced DBMS solutions to handle vast amounts of data from iCloud, Apple Music, and the App Store.
-                        </p>
-                        <p>
-                            <strong>CRM:</strong> The integration of DBMS allows Apple to maintain detailed customer profiles for personalized marketing strategies.
-                        </p>
-                        <p>
-                            <strong>Business Intelligence:</strong> Apple utilizes DBMS to analyze trends, helping in strategic decision-making.
-                        </p>
-
-                        <h3>Privacy and Data Protection</h3>
-                        <p>
-                            Apple’s DBMS approach emphasizes user privacy, encryption, and security to protect sensitive information.
-                        </p>
-
-                        <h3>Impact on Innovation</h3>
-                        <p>
-                            DBMS analytics enable Apple to innovate continuously, improving customer experience across its ecosystem.
-                        </p>
-                    </div>
+            <button onclick="navigateTo('home')" class="back-button">Back to Home</button>
+            <div class="report-card">
+                <h1>Seminar Report</h1>
+                <div class="report-content">
+                    <h2>Case Study - Leveraging Apple Intelligence Using New Age DBMS</h2>
+                    <p><strong>Name:</strong> S K Shreya</p>
+                    <p><strong>Branch:</strong> BTech CSE B</p>
+                    <p><strong>Roll Number:</strong> 1223510233</p>
+                    <h3>Introduction</h3>
+                    <p>The integration of Database Management Systems (DBMS) in Apple Inc.'s intelligence framework is essential for optimizing data management and enhancing analytical capabilities...</p>
                 </div>
             </div>
         </div>
