--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <div id="home" class="page active">
             <div class="container">
                 <div class="card">
-                    <!-- Header Section -->
                     <div class="profile-section">
                         <img src="pic.png" alt="Profile" class="profile-image">
                         <div class="profile-info">
@@ -24,13 +23,13 @@
                             <p>Batch: 2023-24</p>
                         </div>
                     </div>
-
-                    <!-- Presentation Title -->
                     <div class="presentation-section">
                         <h2>Database Management Systems</h2>
                         <h3>Technical Presentation</h3>
-                        <button onclick="navigateTo('presentation')" class="btn btn-primary">View Presentation</button>
-                        <button onclick="navigateTo('report')" class="btn btn-secondary">View Report</button>
+                        <div class="button-group">
+                            <button onclick="navigateTo('presentation')" class="btn btn-primary">View Presentation</button>
+                            <button onclick="navigateTo('report')" class="btn btn-secondary">View Report</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -39,10 +38,10 @@
         <!-- Presentation Page -->
         <div id="presentation" class="page">
             <button onclick="navigateTo('home')" class="back-button">Back to Home</button>
-            <div class="presentation-container">
-                <div class="presentation-frame">
-                    <iframe src="https://www.canva.com/design/DAGd9o6p5qM/UBEX_YyLPd9AzJvU5noGnw/view?embed" width="100%" height="600px" allowfullscreen title="Presentation"></iframe>
-                </div>
+            <div style="position: relative; width: 100%; height: 0; padding-top: 56.25%; box-shadow: 0 2px 8px rgba(63,69,81,0.16); margin-top: 1.6em; overflow: hidden; border-radius: 8px;">
+                <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none;" 
+                    src="https://www.canva.com/design/DAGd9o6p5qM/ldUVdgdgWTEG_MSRtJvvvA/view?embed" allowfullscreen>
+                </iframe>
             </div>
         </div>
 
@@ -51,18 +50,14 @@
             <button onclick="navigateTo('home')" class="back-button">Back to Home</button>
             <div class="report-card">
                 <h1>Seminar Report</h1>
-                <div class="report-content">
-                    <h2>Case Study - Leveraging Apple Intelligence Using New Age DBMS</h2>
-                    <p><strong>Name:</strong> S K Shreya</p>
-                    <p><strong>Branch:</strong> BTech CSE B</p>
-                    <p><strong>Roll Number:</strong> 1223510233</p>
-                    <h3>Introduction</h3>
-                    <p>The integration of Database Management Systems (DBMS) in Apple Inc.'s intelligence framework is essential for optimizing data management and enhancing analytical capabilities...</p>
-                </div>
+                <p><strong>Name:</strong> S K Shreya</p>
+                <p><strong>Branch:</strong> BTech CSE B</p>
+                <p><strong>Roll Number:</strong> 1223510233</p>
+                <h3>Introduction</h3>
+                <p>The integration of DBMS in Apple Intelligence...</p>
             </div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
